gcc/testsuite/g++.dg/modules/p0713-3.C
int k; // { dg-message "ended here" }
module frob; // { dg-error "must be within" }
